# AI_Optimizer

./: README.md  requirements.txt
agent/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agent/agent/: main.py
agent/agent/sub_agents/: optimizer.py  technical.py
agent/ai_agent/: app.py
agent/ai_agent/agents/: basic.py
agent/api/db/: connect.py
agent/app/: auth.py  main.py
agent/app/agent/: agent.py  main.py  tools.py
agent/app/agent/node/: node.py
agent/app/agent/sub_agents/: crawler.py  reporter.py  strategist.py
agent/app/agent/utils/: auditor.py  crawler.py  crawling_auditor.py  market_researcher.py  on_page_analyzer.py  onpage.py  optimizer.py  report_generator.py  research.py  seo_optimizer.py  seo_strategist.py  strategist.py  technical_auditor.py  web_crawler.py
agent/app/auth/: dependencies.py  models.py  utils.py
agent/app/core/: config.py  http_client.py  logger.py  logging.py  main.py  security.py
agent/app/core/sub_agents/: crawler.py  onpage.py  reporter.py  research.py
agent/app/middleware/: request_logger.py  security.py
agent/app/routers/: ai.py  debug.py  health.py  service.py
agent/docs/: main.py  tools.py
agent/docs/sub_agents/: crawler.py  optimizer.py  reporter.py  research.py  strategist.py  technical.py
agent/example/: Web_Scraping.ipynb  main.py
agent/src/: agents.py  crew.py  main.py  tasks.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pom.xml  prometheus.yml  test.txt
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: client-app.tsx  globals.css  (+2 more)
(+186 files in other folders)
