[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "ipython==8.35.0",
    "pydantic==2.11.4",
    "pydantic-settings==2.10.1",
    "pyjwt==2.10.1",
    "python-json-logger==3.3.0",
    "starlette==0.46.2",
    "typing-extensions==4.12.2",
    "uvicorn==0.35.0",
]
