[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddg-scraper>=1.3",
    "ddgs>=9.6.0",
    "fastapi[standard]==0.115.12",
    "httpx==0.28.1",
    "ipython==8.35.0",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.7",
    "pydantic==2.11.4",
    "pydantic-settings==2.10.1",
    "pyjwt==2.10.1",
    "python-dotenv>=1.1.1",
    "python-json-logger==3.3.0",
    "starlette==0.46.2",
    "typing-extensions==4.12.2",
    "uvicorn==0.35.0",
]
